# symphra-container

./: .gitignore  404.html  Makefile  README.md  coverage.xml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
docs/: index.md
docs/en/: best-practices.md  changelog.md  concepts.md  faq.md  getting-started.md  installation.md  testing-guide.md
docs/en/guaids/: container.md  generics-generic-key.md  generics-register-generic.md  generics-resolve-generic.md  injector-constructor.md  injector-dependency-info.md  integrations-django-container.md  integrations-fastapi-inject.md  integrations-flask-container.md  integrations-setup-fastapi.md  types-injected.md  types-injection-marker.md  types-lifetime.md  types-service-key.md  visualization-container-diagnostic.md  visualization-debug-resolution.md  visualization-diagnose-container.md  visualization-print-dependency-graph.md  visualization-visualize-container.md
docs/en/integrations/: django.md  fastapi.md  flask.md
docs/zh/: INDEX.md  best-practices.md  changelog.md  concepts.md  faq.md  installation.md  quick-start.md  testing-guide.md
docs/zh/development/: DEVELOPMENT_SETUP.md
docs/zh/examples/: STARTUP_GUIDE.sh
docs/zh/guaids/: container.md  generics-generic-key.md  generics-register-generic.md  generics-resolve-generic.md  injector-constructor.md  injector-dependency-info.md  integrations-django-container.md  integrations-fastapi-inject.md  integrations-flask-container.md  integrations-setup-fastapi.md  types-injected.md  types-injection-marker.md  types-lifetime.md  types-service-key.md  visualization-container-diagnostic.md  visualization-debug-resolution.md  visualization-diagnose-container.md  visualization-print-dependency-graph.md  visualization-visualize-container.md
docs/zh/guides/: QUICK_START_UV.md  README.md
docs/zh/integrations/: django.md  fastapi.md  flask.md
docs/zh/reference/: ADVANCED_FEATURES_IMPLEMENTATION.md  API_DESIGN.md  TECHNICAL_SPEC.md
en/best-practices/: index.html
en/changelog/: index.html
en/concepts/: index.html
en/faq/: index.html
en/getting-started/: index.html
en/guaids/container/: index.html
en/guaids/generics-generic-key/: index.html
en/guaids/generics-register-generic/: index.html
en/guaids/generics-resolve-generic/: index.html
en/guaids/injector-constructor/: index.html
en/guaids/injector-dependency-info/: index.html
en/guaids/integrations-django-container/: index.html
en/guaids/integrations-fastapi-inject/: index.html
en/guaids/integrations-flask-container/: index.html
en/guaids/integrations-setup-fastapi/: index.html
en/guaids/types-injected/: index.html
en/guaids/types-injection-marker/: index.html
en/guaids/types-lifetime/: index.html
en/guaids/types-service-key/: index.html
en/guaids/visualization-container-diagnostic/: index.html
en/guaids/visualization-debug-resolution/: index.html
en/guaids/visualization-diagnose-container/: index.html
en/guaids/visualization-print-dependency-graph/: index.html
en/guaids/visualization-visualize-container/: index.html
en/installation/: index.html
en/integrations/django/: index.html
en/integrations/fastapi/: index.html
en/integrations/flask/: index.html
en/testing-guide/: index.html
examples/: advanced_features_demo.py
search/: search_index.json
src/symphra_container/: __init__.py  circular.py  container.py  decorators.py  exceptions.py  generics.py  injector.py  lifetime_manager.py  performance.py  types.py  visualization.py
src/symphra_container/integrations/: __init__.py  django.py  fastapi.py  flask.py
tests/: __init__.py  conftest.py
tests/benchmark/: __init__.py  benchmarks.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_fastapi_integration.py  test_flask_integration.py
tests/performance/: __init__.py  test_api_examples.py  test_async_container_performance.py  test_circular_dependencies_performance.py  test_container_performance.py  test_decorators_performance.py  test_generics_performance.py  test_lifetime_manager_performance.py  test_visualization_performance.py
tests/unit/: __init__.py  test_async_container.py  test_circular_dependencies.py  test_container.py  test_coverage.py  test_coverage_final.py  test_decorators.py  test_edge_cases.py  test_exceptions.py  test_generics.py  test_injection.py  test_lifetime_manager.py  test_lifetimes.py  test_new_apis.py  test_performance.py  test_types.py  test_unified_async.py  test_visualization.py
zh/INDEX/: index.html
zh/best-practices/: index.html
zh/changelog/: index.html
zh/concepts/: index.html
zh/development/DEVELOPMENT_SETUP/: index.html
zh/faq/: index.html
zh/guaids/container/: index.html
zh/guaids/generics-generic-key/: index.html
zh/guaids/generics-register-generic/: index.html
zh/guaids/generics-resolve-generic/: index.html
zh/guaids/injector-constructor/: index.html
zh/guaids/injector-dependency-info/: index.html
zh/guaids/integrations-django-container/: index.html
zh/guaids/integrations-fastapi-inject/: index.html
zh/guaids/integrations-flask-container/: index.html
zh/guaids/integrations-setup-fastapi/: index.html
zh/guaids/types-injected/: index.html
zh/guaids/types-injection-marker/: index.html
zh/guaids/types-lifetime/: index.html
zh/guaids/types-service-key/: index.html
zh/guaids/visualization-container-diagnostic/: index.html
zh/guaids/visualization-debug-resolution/: index.html
zh/guaids/visualization-diagnose-container/: index.html
zh/guaids/visualization-print-dependency-graph/: index.html
zh/guaids/visualization-visualize-container/: index.html
zh/guides/: index.html
zh/guides/QUICK_START_UV/: index.html
zh/installation/: index.html
zh/integrations/django/: index.html
zh/integrations/fastapi/: index.html
zh/integrations/flask/: index.html
zh/quick-start/: index.html
zh/reference/ADVANCED_FEATURES_IMPLEMENTATION/: index.html
zh/reference/API_DESIGN/: index.html
zh/reference/TECHNICAL_SPEC/: index.html
zh/testing-guide/: index.html
